--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,9 @@
     padding-top: 50px;
     margin: 0 auto;
 }
-.form{
+#form{
+    display: inline-block;
     width: 500px;
     margin-top: 10px;
-    margin-left: 115px;
+    margin-left: 640px;
 }
